--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,12 +38,45 @@
                 "${workspaceFolder}/out/test/**/*.js"
             ],
             "preLaunchTask": "${defaultBuildTask}"
+        },
+        {
+            "name": "Debug Current Test File",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "--timeout",
+                "999999",
+                "--colors",
+                "${workspaceFolder}/server/out/test/${fileBasenameNoExtension}.js"
+            ],
+            "internalConsoleOptions": "openOnSessionStart",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "outFiles": [
+                "${workspaceFolder}/server/out/**/*.js"
+            ],
+            "preLaunchTask": "npm: compile"
+        },
+        {
+            "name": "Debug ANTLR4 grammar",
+            "type": "antlr-debug",
+            "request": "launch",
+            "input": "${workspaceFolder}/grammar-test.cmake",
+            "grammar": "${workspaceFolder}/server/src/antlr/CMakeSimpleParser.g4",
+            "startRule": "file",
+            "printParseTree": true,
+            "visualParseTree": true,
         }
     ],
     "compounds": [
         {
             "name": "Client + Server",
-            "configurations": ["Launch Client", "Attach to Server"]
+            "configurations": [
+                "Launch Client",
+                "Attach to Server"
+            ]
         }
     ]
 }
