fix multi-line comments parse error

--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
   "scripts": {
     "vscode:prepublish": "node -e \"fs.rmSync('dist', {'recursive': true, 'force': true})\" && npm run product",
     "compile": "tsc -p ./server",
+    "tsc-watch": "tsc -p ./server -w",
     "develop": "npm run grammar && npm run antlr4 && webpack --mode development --watch",
     "product": "npm run grammar && npm run antlr4 && webpack --mode production --devtool false",
     "pretest": "npm run compile && npm run lint",
