更新语言配置，添加尖括号的块注释和自动闭合对

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,11 +1,12 @@
 {
     "comments": {
         "blockComment": [
-            "#[=[",
-            "]=]"
+            "#[[",
+            "]]"
         ],
         "lineComment": "#"
     },
+
     "brackets": [
         [
             "(",
@@ -18,6 +19,10 @@
         [
             "{",
             "}"
+        ],
+        [
+            "<",
+            ">"
         ]
     ],
     "autoClosingPairs": [
@@ -32,6 +37,10 @@
         {
             "open": "(",
             "close": ")"
+        },
+        {
+            "open": "<",
+            "close": ">"
         },
         {
             "open": "\"",
@@ -58,6 +67,10 @@
         [
             "\"",
             "\""
+        ],
+        [
+            "<",
+            ">"
         ]
     ],
     "folding": {
