--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/openkylin/cmake-intellisence"
+    "url": "https://github.com/quanzhuo/cmake-intellisence"
   },
   "dependencies": {
     "vscode-languageclient": "^9.0.1"
